--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "l2js - lineage 2 JavaScript server",
   "main": "LoginServer.js",
-  "dependencies": {},
+  "dependencies": {
+    "mysql": "^2.14.1",
+    "sql": "^0.78.0",
+    "underscore": "^1.8.3"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
